--- a/directbak.yaml
+++ b/directbak.yaml
@@ -536,7 +536,6 @@ payload:
   - '+.0769sun.com'
   - '+.0769sx.com'
   - '+.0769yp.com'
-  - '+.0771.tel'
   - '+.0771bc.com'
   - '+.0771rc.com'
   - '+.0772fang.com'
@@ -584,7 +583,6 @@ payload:
   - '+.0898.net'
   - '+.089858.com'
   - '+.0898888.com'
-  - '+.0898cc.com'
   - '+.0898cfw.com'
   - '+.0898hq.com'
   - '+.0898mmf.com'
@@ -653,7 +651,6 @@ payload:
   - '+.0xffffff.org'
   - '+.0xsky.com'
   - '+.0xue.com'
-  - '+.0y856.com'
   - '+.1-123.com'
   - '+.1-b.tc'
   - '+.1-cs.net'
@@ -1578,7 +1575,6 @@ payload:
   - '+.17ugo.com'
   - '+.17uhui.com'
   - '+.17uhui.net'
-  - '+.17ukulele.com'
   - '+.17usoft.com'
   - '+.17usoft.net'
   - '+.17uxi.com'
@@ -2399,7 +2395,6 @@ payload:
   - '+.2haohr.com'
   - '+.2heng.xin'
   - '+.2hua.com'
-  - '+.2i0vw.com'
   - '+.2ibook.com'
   - '+.2ic.cc'
   - '+.2ita.com'
@@ -2436,7 +2431,6 @@ payload:
   - '+.2tianxin.com'
   - '+.2tx.com'
   - '+.2v8d.com'
-  - '+.2vc00.com'
   - '+.2w.cm'
   - '+.2weima.com'
   - '+.2xd.net'
@@ -2760,6 +2754,7 @@ payload:
   - '+.3600du.com'
   - '+.360114.com'
   - '+.360118.com'
+  - '+.360510.com'
   - '+.36099.com'
   - '+.360abc.com'
   - '+.360aiyi.com'
@@ -4284,7 +4279,6 @@ payload:
   - '+.52ali88.com'
   - '+.52analysis.com'
   - '+.52article.com'
-  - '+.52as.com'
   - '+.52asus.com'
   - '+.52audio.com'
   - '+.52ayw.com'
@@ -4867,7 +4861,6 @@ payload:
   - '+.5gy.com'
   - '+.5h.com'
   - '+.5ha.net'
-  - '+.5hanjutv.com'
   - '+.5hrc.com'
   - '+.5hte21mz.com'
   - '+.5i-training.net'
@@ -5128,6 +5121,11 @@ payload:
   - '+.646000.com'
   - '+.6463.com'
   - '+.64644444.com'
+  - '+.646av04.xyz'
+  - '+.646av05.xyz'
+  - '+.646av06.xyz'
+  - '+.646av08.xyz'
+  - '+.646av09.xyz'
   - '+.648sy.com'
   - '+.64ba.com'
   - '+.64dns.com'
@@ -6175,6 +6173,7 @@ payload:
   - '+.88zyw.net'
   - '+.8910.io'
   - '+.89178.com'
+  - '+.89243599.vip'
   - '+.89274.st'
   - '+.89303.com'
   - '+.8961zx.com'
@@ -6574,7 +6573,6 @@ payload:
   - '+.92wx.com'
   - '+.92wy.com'
   - '+.92xygame.com'
-  - '+.92you.com'
   - '+.9312.net'
   - '+.933.moe'
   - '+.934dsw.com'
@@ -9282,7 +9280,6 @@ payload:
   - '+.avgh5.com'
   - '+.avhome.net'
   - '+.avic.com'
-  - '+.avic021.com'
   - '+.avicnews.com'
   - '+.avicone.com'
   - '+.avicsec.com'
@@ -9394,6 +9391,7 @@ payload:
   - '+.b-fairy.com'
   - '+.b086.com'
   - '+.b0w.me'
+  - '+.b1446.com'
   - '+.b178.com'
   - '+.b1bj.com'
   - '+.b1qg.com'
@@ -9878,7 +9876,6 @@ payload:
   - '+.baoku.com'
   - '+.baokuandi.com'
   - '+.baokutreasury.com'
-  - '+.baolaina.cc'
   - '+.baoltx.com'
   - '+.baomi.com'
   - '+.baomi365.com'
@@ -10623,7 +10620,6 @@ payload:
   - '+.bigplayers.com'
   - '+.bigqiao.com'
   - '+.bigrnet.com'
-  - '+.bigsec.net'
   - '+.biguo100.com'
   - '+.biguolunwen.com'
   - '+.bigwayseo.com'
@@ -11570,7 +11566,6 @@ payload:
   - '+.bouffalolab.com'
   - '+.boweifeng.com'
   - '+.bowerp.com'
-  - '+.bowlplus.com'
   - '+.bowuzhi.fm'
   - '+.boxgu.com'
   - '+.boxopened.com'
@@ -11667,7 +11662,6 @@ payload:
   - '+.bsgslb.com'
   - '+.bsh-tech.com'
   - '+.bsh.com'
-  - '+.bshaishu.com'
   - '+.bshare.com'
   - '+.bsida.com'
   - '+.bsidu.com'
@@ -12081,7 +12075,6 @@ payload:
   - '+.c1042.com'
   - '+.c1ass.com'
   - '+.c1s.com'
-  - '+.c21wuhan.com'
   - '+.c2h4.org'
   - '+.c32356.com'
   - '+.c360dn.com'
@@ -12616,7 +12609,6 @@ payload:
   - '+.ccigmall.com'
   - '+.ccihr.com'
   - '+.ccimz.com'
-  - '+.ccipmedia.com'
   - '+.ccipp.org'
   - '+.ccita.net'
   - '+.ccitimes.com'
@@ -14957,7 +14949,6 @@ payload:
   - '+.clcmw.com'
   - '+.clcyd.com'
   - '+.clean-cn.com'
-  - '+.cleaninfo.com'
   - '+.clear-sz.com'
   - '+.clear888.com'
   - '+.clearaki.com'
@@ -15710,7 +15701,6 @@ payload:
   - '+.cnwaking.com'
   - '+.cnwaternews.com'
   - '+.cnwb.net'
-  - '+.cnwdjj.com'
   - '+.cnwdsy.com'
   - '+.cnwear.com'
   - '+.cnwebe.com'
@@ -18696,7 +18686,6 @@ payload:
   - '+.docx88.com'
   - '+.doczhi.com'
   - '+.doczj.com'
-  - '+.dodashang.com'
   - '+.dodjoy.com'
   - '+.dodo.link'
   - '+.dodo8.com'
@@ -19005,7 +18994,6 @@ payload:
   - '+.dozer.cc'
   - '+.dozview.com'
   - '+.dp.image-gmkt.com'
-  - '+.dp2px.com'
   - '+.dp2u.com'
   - '+.dpcafc.com'
   - '+.dpcq1.net'
@@ -19578,7 +19566,6 @@ payload:
   - '+.dzsaas.com'
   - '+.dzsaascdn.com'
   - '+.dzsc.com'
-  - '+.dzsfx.com'
   - '+.dzsg.com'
   - '+.dzshengchi.com'
   - '+.dzsm.com'
@@ -20356,7 +20343,6 @@ payload:
   - '+.emailflame.com'
   - '+.emailxqq.com'
   - '+.emakerzone.com'
-  - '+.emall.site'
   - '+.emall001.com'
   - '+.emao.com'
   - '+.emao.net'
@@ -20627,7 +20613,6 @@ payload:
   - '+.esensoft.com'
   - '+.esfimg.com'
   - '+.eshangle.com'
-  - '+.eshanyao.com'
   - '+.eshenlin.com'
   - '+.eshimin.com'
   - '+.eshiyun.info'
@@ -21259,7 +21244,6 @@ payload:
   - '+.fantatech.com'
   - '+.fantawild.com'
   - '+.fante.com'
-  - '+.fanten123.com'
   - '+.fantong.com'
   - '+.fantuanhd.com'
   - '+.fanuchdf.com'
@@ -21941,6 +21925,7 @@ payload:
   - '+.fkdmg.com'
   - '+.fkdxg.com'
   - '+.fkesfg.com'
+  - '+.fkhdview.com'
   - '+.fkjie.com'
   - '+.fklngy.com'
   - '+.fkw.com'
@@ -22421,7 +22406,6 @@ payload:
   - '+.fuliansheng.com'
   - '+.fuliao.com'
   - '+.fuliapps.com'
-  - '+.fuliba2020.net'
   - '+.fulibbs.com'
   - '+.fulijd.com'
   - '+.fulimin.org'
@@ -22907,6 +22891,7 @@ payload:
   - '+.gaojianli.me'
   - '+.gaojie.com'
   - '+.gaojihealth.com'
+  - '+.gaojipro.com'
   - '+.gaokao.com'
   - '+.gaokao365.com'
   - '+.gaokao789.com'
@@ -26352,6 +26337,7 @@ payload:
   - '+.hi-gtd.com'
   - '+.hi-lead.com'
   - '+.hi-linux.com'
+  - '+.hi-mantech.com'
   - '+.hi-roy.com'
   - '+.hi-spider.com'
   - '+.hi0755.net'
@@ -27062,7 +27048,6 @@ payload:
   - '+.hostbbs.net'
   - '+.hostbuf.com'
   - '+.hostdie.com'
-  - '+.hostker.com'
   - '+.hostker.net'
   - '+.hostkvm.com'
   - '+.hostmonit.com'
@@ -28415,7 +28400,6 @@ payload:
   - '+.hzxiyuege.com'
   - '+.hzxsjgxx.com'
   - '+.hzxyns.com'
-  - '+.hzy182.xyz'
   - '+.hzyestar.com'
   - '+.hzyhzp.com'
   - '+.hzylpco.com'
@@ -29837,7 +29821,6 @@ payload:
   - '+.ip33.com'
   - '+.ip3366.net'
   - '+.ip518.com'
-  - '+.ip668o.com'
   - '+.ip669.com'
   - '+.ip87.com'
   - '+.ipadown.com'
@@ -30238,7 +30221,6 @@ payload:
   - '+.itmanbu.com'
   - '+.itmastergame.com'
   - '+.itmind.net'
-  - '+.itmo.com'
   - '+.itmoocs.com'
   - '+.itmop.com'
   - '+.itmresources.com'
@@ -31084,7 +31066,6 @@ payload:
   - '+.jianjiaobuluo.com'
   - '+.jianjie8.com'
   - '+.jiankang.com'
-  - '+.jiankang.org'
   - '+.jiankanghebei.com'
   - '+.jiankangju.com'
   - '+.jianke.cc'
@@ -32482,7 +32463,6 @@ payload:
   - '+.juanpimao.com'
   - '+.juanshangwang.com'
   - '+.juanyunkeji.com'
-  - '+.juapp5.com'
   - '+.juaq.com'
   - '+.jubaopay.com'
   - '+.jubaopeng5555.com'
@@ -33665,6 +33645,7 @@ payload:
   - '+.kjzxtk.com'
   - '+.kk.net'
   - '+.kk169.com'
+  - '+.kk2298.com'
   - '+.kk30.com'
   - '+.kk39w.com'
   - '+.kk3g.net'
@@ -34432,6 +34413,7 @@ payload:
   - '+.kzeaa.com'
   - '+.kzecc.com'
   - '+.kzeii.com'
+  - '+.kzemm.com'
   - '+.kzenn.com'
   - '+.kzerr.com'
   - '+.kzett.com'
@@ -34840,7 +34822,6 @@ payload:
   - '+.lbinin.com'
   - '+.lbjljc.com'
   - '+.lbkrs.com'
-  - '+.lbl520.com'
   - '+.lbsmshop.com'
   - '+.lbsrmyy.com'
   - '+.lbwbw.com'
@@ -36467,7 +36448,6 @@ payload:
   - '+.lpcheng.com'
   - '+.lpetl.com'
   - '+.lpllol.com'
-  - '+.lply.net'
   - '+.lppoll.com'
   - '+.lppz.com'
   - '+.lpq1688.com'
@@ -37426,7 +37406,6 @@ payload:
   - '+.maoyia.com'
   - '+.maoyidi.com'
   - '+.maoyingaipu.com'
-  - '+.maoyiw.com'
   - '+.maoyiwang.com'
   - '+.maoyuncloud.com'
   - '+.maoyundns.com'
@@ -37619,6 +37598,7 @@ payload:
   - '+.mcchcdn.com'
   - '+.mcchina.com'
   - '+.mcchou.com'
+  - '+.mcd.cc'
   - '+.mcdchina.net'
   - '+.mcdsusan.com'
   - '+.mcdusiv.com'
@@ -38372,7 +38352,6 @@ payload:
   - '+.minesage.com'
   - '+.minewtech.com'
   - '+.minfengtianfu.com'
-  - '+.mingbaoxinwen.com'
   - '+.mingbianji.com'
   - '+.mingcalc.com'
   - '+.mingchaoonline.com'
@@ -38422,7 +38401,6 @@ payload:
   - '+.mingyuanyun.com'
   - '+.mingyueqingfengshe.com'
   - '+.mingzhuxiaoshuo.com'
-  - '+.mingzihui.com'
   - '+.minhang.cc'
   - '+.minhangshi.com'
   - '+.minhow.com'
@@ -38745,7 +38723,6 @@ payload:
   - '+.mobo168.com'
   - '+.moboage.com'
   - '+.moboplayer.com'
-  - '+.moborobo.com'
   - '+.mobotap.com'
   - '+.mobring.co'
   - '+.mobrtb.com'
@@ -38781,6 +38758,7 @@ payload:
   - '+.moe123.net'
   - '+.moe123.org'
   - '+.moe321.com'
+  - '+.moeacg.shop'
   - '+.moeblog.vip'
   - '+.moeclub.org'
   - '+.moecoder.com'
@@ -39724,6 +39702,7 @@ payload:
   - '+.namesilopro.com'
   - '+.namibox.com'
   - '+.namipan.com'
+  - '+.namisoft.com'
   - '+.namitiyu.com'
   - '+.namoc.org'
   - '+.nanadao.com'
@@ -41572,7 +41551,6 @@ payload:
   - '+.p2pxing.com'
   - '+.p2pxsj.com'
   - '+.p3k3.com'
-  - '+.p491gt.com'
   - '+.p4pp.com'
   - '+.p512.com'
   - '+.p5w.net'
@@ -42157,6 +42135,7 @@ payload:
   - '+.phpkaiyuancms.com'
   - '+.phpkhbd.com'
   - '+.phpkoo.com'
+  - '+.phpmianshi.com'
   - '+.phpok.com'
   - '+.phpor.net'
   - '+.phprpc.org'
@@ -42186,7 +42165,6 @@ payload:
   - '+.pianoun.com'
   - '+.piantou.net'
   - '+.pianwan.com'
-  - '+.pianyim.com'
   - '+.pianyit.com'
   - '+.pianyiwan.com'
   - '+.pianziweb.com'
@@ -42348,7 +42326,6 @@ payload:
   - '+.pinpailun.com'
   - '+.pinpaime.com'
   - '+.pinpaing.com'
-  - '+.pinpaiv.com'
   - '+.pinqugongxiangktv.com'
   - '+.pinshan.com'
   - '+.pinshu.com'
@@ -43142,6 +43119,7 @@ payload:
   - '+.qcwan.com'
   - '+.qcwdpt.com'
   - '+.qcwhw.com'
+  - '+.qcwhxx.com'
   - '+.qcwlpay.com'
   - '+.qcwlseo.com'
   - '+.qcwxjs.com'
@@ -43482,6 +43460,7 @@ payload:
   - '+.qicaispace.com'
   - '+.qicaitechan.com'
   - '+.qicaixianhua.com'
+  - '+.qicc8.cc'
   - '+.qichacha.co'
   - '+.qichacha.com'
   - '+.qichacha.net'
@@ -44071,7 +44050,6 @@ payload:
   - '+.qqhelper.net'
   - '+.qqhot.com'
   - '+.qqhuhu.com'
-  - '+.qqixk.com'
   - '+.qqjay.com'
   - '+.qqjia.com'
   - '+.qqjjsj.com'
@@ -45065,7 +45043,6 @@ payload:
   - '+.ribenbang.com'
   - '+.ribencun.com'
   - '+.ribenshi.com'
-  - '+.riboseyim.com'
   - '+.ricebook.com'
   - '+.ricefish.io'
   - '+.ricequant.com'
@@ -45092,7 +45069,6 @@ payload:
   - '+.rijigu.com'
   - '+.rijiwang.com'
   - '+.rijutv.co'
-  - '+.rikka.app'
   - '+.rilvtong.com'
   - '+.rilzob.com'
   - '+.rim20.com'
@@ -45157,7 +45133,6 @@ payload:
   - '+.rkeji.com'
   - '+.rkgaming.com'
   - '+.rkkgyy.com'
-  - '+.rkmikn.xyz'
   - '+.rksec.com'
   - '+.rkvir.com'
   - '+.rl-consult.com'
@@ -45844,6 +45819,7 @@ payload:
   - '+.sayabear.com'
   - '+.sayloving.com'
   - '+.saywash.com'
+  - '+.sbaliyun.com'
   - '+.sbanzu.com'
   - '+.sbc-mcc.com'
   - '+.sbeira.com'
@@ -46989,7 +46965,6 @@ payload:
   - '+.shgskj.com'
   - '+.shgyg.com'
   - '+.shhanqiao.com'
-  - '+.shhbm.com'
   - '+.shheywow.com'
   - '+.shhgzf.com'
   - '+.shhonghu.com'
@@ -49752,7 +49727,6 @@ payload:
   - '+.sz-dns.net'
   - '+.sz-edsy.com'
   - '+.sz-etong.com'
-  - '+.sz-iflysse.com'
   - '+.sz-jlc.com'
   - '+.sz-lcsc.com'
   - '+.sz-mtr.com'
@@ -50675,8 +50649,6 @@ payload:
   - '+.tengzhipp.com'
   - '+.tengzhuan.com'
   - '+.tenhot.net'
-  - '+.teniucaijing.com'
-  - '+.teniujinfu.com'
   - '+.tenlonstudio.com'
   - '+.tenlywu.com'
   - '+.tenmh.com'
@@ -51525,7 +51497,6 @@ payload:
   - '+.tool.la'
   - '+.tool.lu'
   - '+.tool77.com'
-  - '+.toolinbox.net'
   - '+.toolmall.com'
   - '+.toolmao.com'
   - '+.toolnb.com'
@@ -52421,7 +52392,6 @@ payload:
   - '+.ty2y.com'
   - '+.ty3w.net'
   - '+.ty8866.com'
-  - '+.tyalxx.com'
   - '+.tybai.com'
   - '+.tyc100.com'
   - '+.tychio.net'
@@ -54122,7 +54092,6 @@ payload:
   - '+.wangdaidongfang.com'
   - '+.wangdaidp.com'
   - '+.wangdaijiamen.com'
-  - '+.wangdaijianwen.com'
   - '+.wangdaijin.com'
   - '+.wangdaileida.com'
   - '+.wangdalao.com'
@@ -54280,7 +54249,6 @@ payload:
   - '+.wanshouyou.net'
   - '+.wanshuyun.com'
   - '+.wansongpu.com'
-  - '+.wantattoo.com'
   - '+.wantegame.com'
   - '+.wantexe.com'
   - '+.wantgame.net'
@@ -56524,6 +56492,7 @@ payload:
   - '+.wxeditor.com'
   - '+.wxfenxiao.com'
   - '+.wxfls.net'
+  - '+.wxfncjd.com'
   - '+.wxfsgj.com'
   - '+.wxgamemini.com'
   - '+.wxgrcpa.com'
@@ -56681,7 +56650,6 @@ payload:
   - '+.x158.tv'
   - '+.x1997.net'
   - '+.x23qb.com'
-  - '+.x23us.cc'
   - '+.x23us.me'
   - '+.x23us.us'
   - '+.x23wxw.com'
@@ -57660,6 +57628,7 @@ payload:
   - '+.xier.tech'
   - '+.xiesk.com'
   - '+.xieso.net'
+  - '+.xietonghuaxue.com'
   - '+.xietui.com'
   - '+.xiexiaoyuan.com'
   - '+.xiexiebang.com'
@@ -58536,7 +58505,6 @@ payload:
   - '+.xpu93.com'
   - '+.xpw888.com'
   - '+.xpxt.net'
-  - '+.xpykjsws.com'
   - '+.xpyx.net'
   - '+.xq0356.com'
   - '+.xq5.com'
@@ -58935,7 +58903,6 @@ payload:
   - '+.xuyi.net'
   - '+.xuyilx.com'
   - '+.xuyimin.club'
-  - '+.xuyongren.com'
   - '+.xuyuanyi.com'
   - '+.xuzhi.net'
   - '+.xuzhoujob.com'
@@ -59080,7 +59047,6 @@ payload:
   - '+.xyfcw.com'
   - '+.xyffsb.com'
   - '+.xyfw.org'
-  - '+.xyg688.com'
   - '+.xygmed.com'
   - '+.xyhc.com'
   - '+.xyhis.com'
@@ -59852,7 +59818,6 @@ payload:
   - '+.yhzky1.net'
   - '+.yhzm.cc'
   - '+.yhzm.com'
-  - '+.yhzml.com'
   - '+.yhzuche.com'
   - '+.yhzy365.com'
   - '+.yi-jy.com'
@@ -60256,7 +60221,6 @@ payload:
   - '+.yirimao.com'
   - '+.yirlir.com'
   - '+.yiruantong.com'
-  - '+.yiruanwang.com'
   - '+.yiruide.com'
   - '+.yiruikecorp.com'
   - '+.yiruituo.com'
@@ -61549,7 +61513,6 @@ payload:
   - '+.yunda56.com'
   - '+.yundaex.com'
   - '+.yundangan.com'
-  - '+.yundaohuodong.com'
   - '+.yundasys.com'
   - '+.yundianjia.com'
   - '+.yundianseo.com'
@@ -63059,7 +63022,6 @@ payload:
   - '+.zhijin.com'
   - '+.zhijinwang.com'
   - '+.zhijl.com'
-  - '+.zhijuke.com'
   - '+.zhikao100.com'
   - '+.zhiketong.com'
   - '+.zhiketong.net'
@@ -64652,6 +64614,7 @@ payload:
   - '+.zxzhijia.com'
   - '+.zxzj.me'
   - '+.zxzlf.com'
+  - '+.zxzt123.com'
   - '+.zxzyl.com'
   - '+.zxzyy.com'
   - '+.zy-cam.com'
