--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1630,6 +1630,7 @@ payload:
   - '+.186688.com'
   - '+.1873game.com'
   - '+.187801.com'
+  - '+.187997.com'
   - '+.188.com'
   - '+.188158.com'
   - '+.188187.xyz'
@@ -4545,6 +4546,7 @@ payload:
   - '+.556z.com'
   - '+.557.net'
   - '+.5577.com'
+  - '+.5580866.cc'
   - '+.5588.tv'
   - '+.5599.com'
   - '+.55dai.com'
@@ -4681,6 +4683,7 @@ payload:
   - '+.5858.com'
   - '+.58611.net'
   - '+.5866.com'
+  - '+.587tz079.cc'
   - '+.5884.com'
   - '+.5888.tv'
   - '+.588991.com'
@@ -4774,6 +4777,7 @@ payload:
   - '+.59490.com'
   - '+.595818.com'
   - '+.595led.com'
+  - '+.595tz286.cc'
   - '+.596fc.com'
   - '+.597.com'
   - '+.59706.com'
@@ -5384,6 +5388,7 @@ payload:
   - '+.6xd.com'
   - '+.6xigema.com'
   - '+.6xw.com'
+  - '+.6y6s066.com'
   - '+.6yoo.com'
   - '+.6yu6.com'
   - '+.6yuexi.com'
@@ -5960,6 +5965,7 @@ payload:
   - '+.84684.net'
   - '+.8477.com'
   - '+.848.com'
+  - '+.8487x.com'
   - '+.849959.com'
   - '+.84dwc.com'
   - '+.84fk.com'
@@ -6843,7 +6849,9 @@ payload:
   - '+.9981seo.com'
   - '+.9981ypk.com'
   - '+.9982.com'
+  - '+.99886aaa.com'
   - '+.99887w.com'
+  - '+.99888aaa.com'
   - '+.998jk.com'
   - '+.998jx.com'
   - '+.9991.com'
@@ -6853,6 +6861,7 @@ payload:
   - '+.999777.com'
   - '+.9998.tv'
   - '+.99988866.xyz'
+  - '+.99998aaa.com'
   - '+.99999net.net'
   - '+.999ask.com'
   - '+.999brain.com'
@@ -12749,7 +12758,6 @@ payload:
   - '+.cdbybo.com'
   - '+.cdccpit.org'
   - '+.cdcgames.net'
-  - '+.cdchsj.com'
   - '+.cdchuandong.com'
   - '+.cdcoslm.com'
   - '+.cdcyts.com'
@@ -16453,6 +16461,7 @@ payload:
   - '+.csiccq.com'
   - '+.csicmakers.com'
   - '+.csiea.net'
+  - '+.csiteadmin.com'
   - '+.csj309.vip'
   - '+.csjcs.com'
   - '+.csjplatform.com'
@@ -26066,6 +26075,7 @@ payload:
   - '+.hengdulaw.com'
   - '+.hengfujz.com'
   - '+.hengjiafish.net'
+  - '+.hengjiecdn.com'
   - '+.hengjiecom.com'
   - '+.hengqian.com'
   - '+.hengqijy.com'
@@ -27968,6 +27978,7 @@ payload:
   - '+.huomaow.com'
   - '+.huomaqun.com'
   - '+.huoming.com'
+  - '+.huopinyuan.com'
   - '+.huoqiuapp.com'
   - '+.huosdk.com'
   - '+.huoshan.cc'
@@ -29465,6 +29476,7 @@ payload:
   - '+.imoduo.com'
   - '+.imoe.me'
   - '+.imoeer.com'
+  - '+.imoeq.com'
   - '+.imofan.com'
   - '+.imoffice.com'
   - '+.imolink.com'
@@ -30296,6 +30308,7 @@ payload:
   - '+.iuni.com'
   - '+.iuoooo.com'
   - '+.iuplus.com'
+  - '+.iusmob.com'
   - '+.iuynfg.com'
   - '+.iv06.com'
   - '+.ivali.com'
@@ -33615,6 +33628,7 @@ payload:
   - '+.kjzxtk.com'
   - '+.kk.net'
   - '+.kk169.com'
+  - '+.kk1885.com'
   - '+.kk2298.com'
   - '+.kk30.com'
   - '+.kk39w.com'
@@ -33996,6 +34010,7 @@ payload:
   - '+.ku2048.net'
   - '+.ku25.com'
   - '+.ku3721.com'
+  - '+.ku3c.shop'
   - '+.ku6.com'
   - '+.ku6.net'
   - '+.ku6cdn.com'
@@ -34060,6 +34075,7 @@ payload:
   - '+.kuaila.com'
   - '+.kuaile-u.com'
   - '+.kuaile800.com'
+  - '+.kuailedo.com'
   - '+.kuailelunwen.com'
   - '+.kuailesh.com'
   - '+.kuailetongyao.com'
@@ -34306,6 +34322,7 @@ payload:
   - '+.kwx.gd'
   - '+.kwxjh.net'
   - '+.kx001.com'
+  - '+.kx1158.com'
   - '+.kx1d.com'
   - '+.kx516.com'
   - '+.kx7p.com'
@@ -34358,7 +34375,6 @@ payload:
   - '+.kyjxy.com'
   - '+.kylc.com'
   - '+.kyleduo.com'
-  - '+.kylienet.com'
   - '+.kyligence.io'
   - '+.kylin-os.com'
   - '+.kylinlot.com'
@@ -39628,6 +39644,7 @@ payload:
   - '+.naichabiao.com'
   - '+.naifei.pro'
   - '+.naigirl.com'
+  - '+.naimal.com'
   - '+.naimei.com'
   - '+.nainiuapp.com'
   - '+.naiping.net'
@@ -40343,7 +40360,6 @@ payload:
   - '+.njxzwh.com'
   - '+.njycwy.com'
   - '+.njyingtaoya.com'
-  - '+.njyongji.com'
   - '+.njyydl.com'
   - '+.njzb.net'
   - '+.njzc025.com'
@@ -44257,6 +44273,7 @@ payload:
   - '+.queji.tw'
   - '+.queniubg.com'
   - '+.queniucf.com'
+  - '+.queniuck.com'
   - '+.queniufm.com'
   - '+.queniuso.com'
   - '+.queniusy.com'
@@ -45566,6 +45583,7 @@ payload:
   - '+.sact-digital.com'
   - '+.sae-china.org'
   - '+.saebbs.com'
+  - '+.saen.com'
   - '+.safecenter.com'
   - '+.safehoo.com'
   - '+.safejmp.com'
@@ -53406,6 +53424,7 @@ payload:
   - '+.viday.org'
   - '+.videaba.com'
   - '+.video-study.com'
+  - '+.video-voip.com'
   - '+.videocc.net'
   - '+.videohupu.com'
   - '+.videoincloud.com'
@@ -53689,6 +53708,7 @@ payload:
   - '+.vpsjie.com'
   - '+.vpsjxw.com'
   - '+.vpsmm.com'
+  - '+.vpsno.com'
   - '+.vpsoff.net'
   - '+.vpsor.com'
   - '+.vpsqb.com'
@@ -53731,6 +53751,7 @@ payload:
   - '+.vshengsu.com'
   - '+.vshouce.com'
   - '+.vshuoshuo.com'
+  - '+.vsjwtcdn.com'
   - '+.vslai.com'
   - '+.vsnoon.com'
   - '+.vsnoon.net'
@@ -54629,6 +54650,7 @@ payload:
   - '+.weipinchu.com'
   - '+.weiping.com'
   - '+.weipu.com'
+  - '+.weipuhj.com'
   - '+.weiq.com'
   - '+.weiqi.cc'
   - '+.weiqiaocy.com'
@@ -59256,6 +59278,7 @@ payload:
   - '+.yanliu.org'
   - '+.yanlutong.com'
   - '+.yanmbjiage.com'
+  - '+.yannaisi.com'
   - '+.yannv.com'
   - '+.yanoda.com'
   - '+.yanpk.com'
@@ -60445,8 +60468,6 @@ payload:
   - '+.ymraaa.com'
   - '+.ymrcw.vip'
   - '+.ymsteam.com'
-  - '+.ymsxq007.pw'
-  - '+.ymsxq009.pw'
   - '+.ymt.com'
   - '+.ymt360.com'
   - '+.ymtc.com'
@@ -62292,6 +62313,7 @@ payload:
   - '+.zentao.net'
   - '+.zentaopm.com'
   - '+.zeperd.com'
+  - '+.zepp.com'
   - '+.zeq366.net'
   - '+.zerobreeze.com'
   - '+.zerocollege.com'
@@ -64682,6 +64704,7 @@ payload:
   - '+.zzpuke.com'
   - '+.zzqklm.com'
   - '+.zzqxs.com'
+  - '+.zzqzz.com'
   - '+.zzrbl.com'
   - '+.zzrseng.com'
   - '+.zzsf.com'
