--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2949,6 +2949,7 @@ payload:
   - '+.3663.com'
   - '+.366300.com'
   - '+.366ec.com'
+  - '+.366kmpf.com'
   - '+.366translation.com'
   - '+.36706.com'
   - '+.3673.com'
@@ -3259,6 +3260,7 @@ payload:
   - '+.4.cm'
   - '+.400-lighting.com'
   - '+.400.com'
+  - '+.4000034168.com'
   - '+.4000278400.com'
   - '+.4000500521.com'
   - '+.4000730138.com'
@@ -3448,7 +3450,6 @@ payload:
   - '+.48.com'
   - '+.4846.com'
   - '+.48575.com'
-  - '+.485ka.com'
   - '+.4864678.com'
   - '+.4869.cc'
   - '+.48855268.com'
@@ -4564,7 +4565,6 @@ payload:
   - '+.55shantao.com'
   - '+.55tuan.com'
   - '+.55tuanimg.com'
-  - '+.55wz.com'
   - '+.55xiazai.com'
   - '+.55y5.com'
   - '+.56-7.com'
@@ -5290,7 +5290,6 @@ payload:
   - '+.695157.com'
   - '+.695175.com'
   - '+.695275.com'
-  - '+.695691.xyz'
   - '+.695828.com'
   - '+.695ljg.com'
   - '+.698wan.com'
@@ -6040,6 +6039,7 @@ payload:
   - '+.86wol.com'
   - '+.86xq.com'
   - '+.86y.org'
+  - '+.86yqy.com'
   - '+.86zsw.com'
   - '+.87.com'
   - '+.870818.com'
@@ -6896,6 +6896,7 @@ payload:
   - '+.99jiaoshi.com'
   - '+.99kgames.com'
   - '+.99lb.net'
+  - '+.99leidun.com'
   - '+.99max.me'
   - '+.99mc.com'
   - '+.99meiju.app'
@@ -7864,6 +7865,7 @@ payload:
   - '+.aiseminar.com'
   - '+.aishangba.org'
   - '+.aishangcan.com'
+  - '+.aishangyangyu.com'
   - '+.aishengji.com'
   - '+.aisila.com'
   - '+.aisino.com'
@@ -7926,7 +7928,6 @@ payload:
   - '+.aixiezuo.com'
   - '+.aixifan.com'
   - '+.aixigua.com'
-  - '+.aixinbaomu.com'
   - '+.aixinquban.com'
   - '+.aixinwu.org'
   - '+.aixinyunfan.com'
@@ -12184,7 +12185,6 @@ payload:
   - '+.cailiao.com'
   - '+.cailiaoniu.com'
   - '+.cailiaoren.com'
-  - '+.cailol.com'
   - '+.cailutong.com'
   - '+.caimai.cc'
   - '+.caimei365.com'
@@ -17773,14 +17773,12 @@ payload:
   - '+.dep-star.com'
   - '+.depeat.com'
   - '+.dephir.com'
-  - '+.depin.com'
   - '+.deppon.com'
   - '+.deppxp.net'
   - '+.deqingbank.com'
   - '+.deqinglaw.com'
   - '+.derekchou.com'
   - '+.derenbs.com'
-  - '+.derwer.com'
   - '+.derzh.com'
   - '+.des8.com'
   - '+.desaysv.com'
@@ -19240,6 +19238,7 @@ payload:
   - '+.duokaiwang.com'
   - '+.duokan.com'
   - '+.duokanbox.com'
+  - '+.duoke.net'
   - '+.duokebao.net'
   - '+.duokebo.com'
   - '+.duoketuan.com'
@@ -20568,6 +20567,7 @@ payload:
   - '+.esdaxiagu.com'
   - '+.esde.cc'
   - '+.esduu.com'
+  - '+.esellerbox-case.com'
   - '+.esemseo.com'
   - '+.esensoft.com'
   - '+.esfimg.com'
@@ -21147,7 +21147,6 @@ payload:
   - '+.fangzongguan.com'
   - '+.fanhai-hk.com'
   - '+.fanhai8.com'
-  - '+.fanhaobai.com'
   - '+.fanhaoyue.com'
   - '+.fanhonghua.net'
   - '+.fanhougame.com'
@@ -24517,6 +24516,7 @@ payload:
   - '+.gxfxwh.com'
   - '+.gxganju.com'
   - '+.gxgkcat.com'
+  - '+.gxgm.net'
   - '+.gxgzlm.com'
   - '+.gxhl.com'
   - '+.gxhouse.com'
@@ -25025,7 +25025,6 @@ payload:
   - '+.haitoujia.com'
   - '+.haituie.com'
   - '+.haituncun.com'
-  - '+.haitundr.com'
   - '+.haitunshenghuo.com'
   - '+.haituntui.com'
   - '+.haitunvoice.com'
@@ -26700,7 +26699,6 @@ payload:
   - '+.hnhaofang.com'
   - '+.hnhflqgc.com'
   - '+.hnhnled.com'
-  - '+.hnhxhz.com'
   - '+.hnhxin.com'
   - '+.hnhxxk.com'
   - '+.hniec.org'
@@ -30871,6 +30869,7 @@ payload:
   - '+.jh3j.com'
   - '+.jh8k.com'
   - '+.jhcb.net'
+  - '+.jhcfz.com'
   - '+.jhcms.com'
   - '+.jhctbank.com'
   - '+.jhdqz.com'
@@ -31460,6 +31459,7 @@ payload:
   - '+.jingyanzhinan.com'
   - '+.jingyeqian.com'
   - '+.jingyi186.com'
+  - '+.jingyinb.com'
   - '+.jingyougz.com'
   - '+.jingytech.com'
   - '+.jingyu.com'
@@ -31485,6 +31485,7 @@ payload:
   - '+.jinjianbio.com'
   - '+.jinjiang.com'
   - '+.jinjianginns.com'
+  - '+.jinjie.tech'
   - '+.jinjingquan.com'
   - '+.jinju8.com'
   - '+.jinjunmei.net'
@@ -32747,7 +32748,6 @@ payload:
   - '+.jxkjzb.com'
   - '+.jxkp.com'
   - '+.jxlgjd.com'
-  - '+.jxlhz.com'
   - '+.jxlwgame.com'
   - '+.jxmlkd.com'
   - '+.jxndxuebao.com'
@@ -34926,8 +34926,10 @@ payload:
   - '+.lede.com'
   - '+.ledhxgc.com'
   - '+.ledianduo.com'
+  - '+.ledianyun.com'
   - '+.lediaocha.com'
   - '+.ledo.com'
+  - '+.ledouya.com'
   - '+.ledsdk.com'
   - '+.ledth.com'
   - '+.ledu.com'
@@ -35996,6 +35998,7 @@ payload:
   - '+.ljxww.com'
   - '+.ljyhtg.com'
   - '+.ljzfin.com'
+  - '+.lk361.com'
   - '+.lkcash.com'
   - '+.lkcgyl.com'
   - '+.lkcoffee.com'
@@ -36422,7 +36425,6 @@ payload:
   - '+.lqbj.com'
   - '+.lqbj66.com'
   - '+.lqbyj.com'
-  - '+.lqgcb.com'
   - '+.lqgrdj.com'
   - '+.lqhualang.com'
   - '+.lqjob88.com'
@@ -37607,6 +37609,7 @@ payload:
   - '+.mdvoo.com'
   - '+.mdy-edu.com'
   - '+.mdybk.com'
+  - '+.mdydt.net'
   - '+.me-city.com'
   - '+.me361.com'
   - '+.me4399.com'
@@ -39691,7 +39694,6 @@ payload:
   - '+.nanrentu.cc'
   - '+.nanrenwa.com'
   - '+.nanshanski.com'
-  - '+.nanshifaxing.com'
   - '+.nantaihu.com'
   - '+.nantonghua.net'
   - '+.nanxueqx.com'
@@ -43226,6 +43228,7 @@ payload:
   - '+.qhjyks.com'
   - '+.qhkyfund.com'
   - '+.qhlhfund.com'
+  - '+.qhliepin.com'
   - '+.qhlingwang.com'
   - '+.qhlly.com'
   - '+.qhm123.com'
@@ -43862,6 +43865,8 @@ payload:
   - '+.ql-msx.com'
   - '+.ql18.mobi'
   - '+.ql1d.com'
+  - '+.ql361.com'
+  - '+.ql361.shop'
   - '+.ql47.com'
   - '+.ql789.com'
   - '+.qlbchina.com'
@@ -46716,7 +46721,6 @@ payload:
   - '+.shcsdq.com'
   - '+.shcso.com'
   - '+.shcstheatre.com'
-  - '+.shcxzxgs.com'
   - '+.shdctp.com'
   - '+.shdjt.com'
   - '+.shdmt.net'
@@ -47531,7 +47535,6 @@ payload:
   - '+.shxibeiquanshe.com'
   - '+.shxil.com'
   - '+.shxkwck.com'
-  - '+.shxmhc.com'
   - '+.shxnetwork.com'
   - '+.shxwcb.com'
   - '+.shy99.com'
@@ -47582,6 +47585,7 @@ payload:
   - '+.shzq.com'
   - '+.shzs-benz-vpc.com'
   - '+.shzsun.com'
+  - '+.shzyw.com'
   - '+.si-en.com'
   - '+.si-in.com'
   - '+.si.cdn.dell.com'
@@ -48221,6 +48225,7 @@ payload:
   - '+.smyfinancial.com'
   - '+.smyhvae.com'
   - '+.smyx.net'
+  - '+.smyxxj.com'
   - '+.smzdm.co'
   - '+.smzdm.com'
   - '+.smzdmimg.com'
@@ -51151,6 +51156,7 @@ payload:
   - '+.tjgangkouyiyuan.com'
   - '+.tjgcs.com'
   - '+.tjgtgd.com'
+  - '+.tjhskj.com'
   - '+.tjhukou.com'
   - '+.tjhyzyxy.com'
   - '+.tjinsuo.com'
@@ -52027,7 +52033,6 @@ payload:
   - '+.tuimax.com'
   - '+.tuimob.com'
   - '+.tuimotuimo.com'
-  - '+.tuimz.com'
   - '+.tuipeanut.com'
   - '+.tuipear.com'
   - '+.tuipenguin.com'
@@ -52232,6 +52237,7 @@ payload:
   - '+.tvyouxuan.com'
   - '+.tvzhe.com'
   - '+.tvzn.com'
+  - '+.tw-yun.com'
   - '+.tw2sm.com'
   - '+.tw93.fun'
   - '+.twanxi.com'
@@ -54002,6 +54008,7 @@ payload:
   - '+.wanfangtech.com'
   - '+.wanfantian.com'
   - '+.wanfumei.net'
+  - '+.wanfuqianqiu.com'
   - '+.wang-li.com'
   - '+.wang-nan.com'
   - '+.wang-russell.cc'
@@ -56817,7 +56824,6 @@ payload:
   - '+.xdfkt.com'
   - '+.xdfpr.com'
   - '+.xdgalaxy.com'
-  - '+.xdh0808.com'
   - '+.xdhbs.com'
   - '+.xdhcn.com'
   - '+.xdiarys.com'
@@ -57130,6 +57136,7 @@ payload:
   - '+.xianlaigame.com'
   - '+.xianlaihy.com'
   - '+.xianlife.com'
+  - '+.xianmaiyangsheng.com'
   - '+.xianms.com'
   - '+.xianniuzu.com'
   - '+.xianpp.com'
@@ -59718,7 +59725,6 @@ payload:
   - '+.yhspy.com'
   - '+.yhsrv.com'
   - '+.yhtools.cc'
-  - '+.yhtower.com'
   - '+.yhtx.tv'
   - '+.yhurl.com'
   - '+.yhwomen.com'
@@ -60336,7 +60342,6 @@ payload:
   - '+.ykedu.net'
   - '+.ykimg.com'
   - '+.ykinvestment.com'
-  - '+.ykntv.com'
   - '+.ykplg.com'
   - '+.ykpxxx.com'
   - '+.ykq.ink'
@@ -62043,6 +62048,7 @@ payload:
   - '+.zaizai8.com'
   - '+.zajilu.com'
   - '+.zakdy.com'
+  - '+.zaker.com'
   - '+.zallcn.com'
   - '+.zallfuhui.com'
   - '+.zallgo.com'
@@ -62462,7 +62468,6 @@ payload:
   - '+.zgsynews.com'
   - '+.zgtghccl.com'
   - '+.zgtianqi.com'
-  - '+.zgtjq.com'
   - '+.zgtlgs.com'
   - '+.zgtsm.com'
   - '+.zgtuku.com'
@@ -63800,6 +63805,7 @@ payload:
   - '+.zjzdgj.com'
   - '+.zjzfcj.com'
   - '+.zjzg.com'
+  - '+.zjzhitan.com'
   - '+.zjzj.org'
   - '+.zjzjhotel.com'
   - '+.zjzs.net'
