--- a/directbak.yaml
+++ b/directbak.yaml
@@ -264,7 +264,6 @@ payload:
   - '+.033033.com'
   - '+.0335e.com'
   - '+.03412.com'
-  - '+.034666.com'
   - '+.035110000.com'
   - '+.0351data.com'
   - '+.0351fdc.com'
@@ -1382,7 +1381,6 @@ payload:
   - '+.16pic.com'
   - '+.16rd.com'
   - '+.16sucai.com'
-  - '+.16tree.com'
   - '+.16tz.com'
   - '+.16wl.cc'
   - '+.16xcw.com'
@@ -2228,7 +2226,6 @@ payload:
   - '+.2556r.com'
   - '+.256app.com'
   - '+.25752.com'
-  - '+.258.com'
   - '+.258288.com'
   - '+.25838yn.com'
   - '+.25847.com'
@@ -2648,6 +2645,7 @@ payload:
   - '+.3366.com'
   - '+.3366.net'
   - '+.336688.net'
+  - '+.3366886633.com'
   - '+.3366img.com'
   - '+.3367.com'
   - '+.337000.com'
@@ -5626,8 +5624,6 @@ payload:
   - '+.788899.com'
   - '+.788v.com'
   - '+.78901.net'
-  - '+.789294.cc'
-  - '+.789314.cc'
   - '+.789gg.com'
   - '+.789hi.com'
   - '+.789msw.com'
@@ -5988,6 +5984,7 @@ payload:
   - '+.86262.com'
   - '+.8633.com'
   - '+.863347.com'
+  - '+.8644aaw.com'
   - '+.86516.com'
   - '+.865211.com'
   - '+.86590.com'
@@ -6102,6 +6099,7 @@ payload:
   - '+.8864.com'
   - '+.8864.org'
   - '+.8866.org'
+  - '+.8866886688.com'
   - '+.886966.com'
   - '+.886abc.com'
   - '+.886vps.com'
@@ -6830,6 +6828,7 @@ payload:
   - '+.9966.org'
   - '+.9966333.com'
   - '+.99665.at'
+  - '+.9966886699.com'
   - '+.9966w.com'
   - '+.996a.com'
   - '+.996dns.com'
@@ -7328,7 +7327,6 @@ payload:
   - '+.adeaz.com'
   - '+.adebang.com'
   - '+.adebibi.com'
-  - '+.adeline.cc'
   - '+.adesk.com'
   - '+.adexplain.com'
   - '+.adfeiwo.com'
@@ -7515,7 +7513,6 @@ payload:
   - '+.agrochemshow.com'
   - '+.agrodt.com'
   - '+.agrofairs.com'
-  - '+.agrokingcn.com'
   - '+.agrosg.com'
   - '+.agrowingchina.com'
   - '+.agucn.com'
@@ -8779,7 +8776,6 @@ payload:
   - '+.app86.com'
   - '+.app887.com'
   - '+.appadhoc.com'
-  - '+.apparelsos.com'
   - '+.appbi.com'
   - '+.appbk.com'
   - '+.appbocai.com'
@@ -10738,7 +10734,6 @@ payload:
   - '+.biquge.biz'
   - '+.biquge.info'
   - '+.biquge.la'
-  - '+.biquge.lu'
   - '+.biquge.vip'
   - '+.biquge11.com'
   - '+.biquge5200.cc'
@@ -11621,6 +11616,7 @@ payload:
   - '+.bsbydd.com'
   - '+.bsccdn.com'
   - '+.bsccdn.net'
+  - '+.bscdnd.com'
   - '+.bscdns.com'
   - '+.bscea.org'
   - '+.bscedge.com'
@@ -12658,7 +12654,6 @@ payload:
   - '+.ccrgt.com'
   - '+.ccrjw.com'
   - '+.ccshao.com'
-  - '+.ccshell.com'
   - '+.ccsph.com'
   - '+.ccssmm.com'
   - '+.cct08.com'
@@ -17130,6 +17125,7 @@ payload:
   - '+.dajiashequ.com'
   - '+.dajiashuo.com'
   - '+.dajiatou.com'
+  - '+.dajiayouxuan.com'
   - '+.dajiazhao.com'
   - '+.dajiazhongyi.com'
   - '+.dajie.com'
@@ -19312,6 +19308,7 @@ payload:
   - '+.dushuge.net'
   - '+.dushw.com'
   - '+.dustess.com'
+  - '+.dustglobal.com'
   - '+.dustit.me'
   - '+.dusulang.com'
   - '+.dute.me'
@@ -22196,7 +22193,6 @@ payload:
   - '+.free-img.com'
   - '+.free.mk'
   - '+.free789.com'
-  - '+.freebsdchina.org'
   - '+.freebuf.com'
   - '+.freecat.work'
   - '+.freecplus.net'
@@ -22238,6 +22234,7 @@ payload:
   - '+.fright-tattoo.com'
   - '+.fringe-zero.com'
   - '+.friok.com'
+  - '+.frisoweb.com'
   - '+.frjie.com'
   - '+.frlh168.com'
   - '+.frombyte.com'
@@ -24145,6 +24142,7 @@ payload:
   - '+.gtm-i1d8.com'
   - '+.gtm-i1d9.com'
   - '+.gtm-i2d8.com'
+  - '+.gtm-i2d9.com'
   - '+.gtmlufax.com'
   - '+.gtn9.com'
   - '+.gtobal.com'
@@ -24893,7 +24891,6 @@ payload:
   - '+.hadyang.com'
   - '+.haers.com'
   - '+.haguan.com'
-  - '+.haguotu.com'
   - '+.haguworld.com'
   - '+.haha168.com'
   - '+.haha33.com'
@@ -25420,7 +25417,6 @@ payload:
   - '+.haoxiyou.com'
   - '+.haoxue.com'
   - '+.haoxuetang99.com'
-  - '+.haoxxwang.com'
   - '+.haoyangmao8.com'
   - '+.haoyao.com'
   - '+.haoychuang.com'
@@ -25510,6 +25506,7 @@ payload:
   - '+.have.ink'
   - '+.havefun.im'
   - '+.hawbel.com'
+  - '+.hawkeye.fun'
   - '+.hax18.com'
   - '+.haxiu.com'
   - '+.haxwx.cc'
@@ -27418,7 +27415,6 @@ payload:
   - '+.huainet.com'
   - '+.huaisimida.com'
   - '+.huajia.cc'
-  - '+.huajia2000.com'
   - '+.huajiakeji.com'
   - '+.huajialishe.com'
   - '+.huajianmed.com'
@@ -32261,7 +32257,6 @@ payload:
   - '+.jsclearing.com'
   - '+.jscmjt.com'
   - '+.jscnc.net'
-  - '+.jscqmy.com'
   - '+.jscqt.com'
   - '+.jscsfc.com'
   - '+.jscssimg.com'
@@ -33376,6 +33371,7 @@ payload:
   - '+.kenkapacking.com'
   - '+.kenshin.wang'
   - '+.kenshu.cc'
+  - '+.kenshuju.com'
   - '+.kentier.com'
   - '+.kenuonet.com'
   - '+.kenweini.com'
@@ -34250,7 +34246,6 @@ payload:
   - '+.kutoo8.com'
   - '+.kutsg.com'
   - '+.kutuan.com'
-  - '+.kuuhuu.com'
   - '+.kuuke.com'
   - '+.kuwan8.com'
   - '+.kuwanapp.com'
@@ -34273,6 +34268,7 @@ payload:
   - '+.kuzhazha.com'
   - '+.kuzhengame.com'
   - '+.kveff.com'
+  - '+.kvegg.com'
   - '+.kveii.com'
   - '+.kvemm.com'
   - '+.kvenjoy.com'
@@ -39638,7 +39634,6 @@ payload:
   - '+.naiping.net'
   - '+.naitang.com'
   - '+.naiveblue.com'
-  - '+.naiyou.cc'
   - '+.najiaoluo.com'
   - '+.nakedhub.com'
   - '+.nakedsail.com'
@@ -43691,7 +43686,6 @@ payload:
   - '+.qiqici.com'
   - '+.qiqids.com'
   - '+.qiqipu.com'
-  - '+.qiqipu.tv'
   - '+.qiqiuyu.com'
   - '+.qiqiuyun.net'
   - '+.qiqu.la'
@@ -46563,7 +46557,6 @@ payload:
   - '+.shanghaitower.com'
   - '+.shanghaiwater.com'
   - '+.shanghaixs.com'
-  - '+.shanghaizaojia.com'
   - '+.shanghaizhenji.com'
   - '+.shanghuiyi.com'
   - '+.shangji998.com'
@@ -47650,7 +47643,6 @@ payload:
   - '+.silianmall.com'
   - '+.siliaobaba.com'
   - '+.siliaokelijixie.com'
-  - '+.siliaoycw.com'
   - '+.siling.com'
   - '+.silkpresent.com'
   - '+.silkroadtechnologies.com'
@@ -47686,6 +47678,7 @@ payload:
   - '+.simperfect.com'
   - '+.simple-is-better.com'
   - '+.simplecd.cc'
+  - '+.simplecreator.net'
   - '+.simpledatas.com'
   - '+.simplexue.com'
   - '+.simpo-data.com'
@@ -52711,7 +52704,6 @@ payload:
   - '+.uliang.vip'
   - '+.uliaobao.com'
   - '+.ulikecam.com'
-  - '+.ulikemusic.com'
   - '+.ulinix.com'
   - '+.ulink.cc'
   - '+.ulpay.com'
@@ -52974,6 +52966,7 @@ payload:
   - '+.use-trust.com'
   - '+.useaudio.com'
   - '+.usecubes.com'
+  - '+.useragentinfo.com'
   - '+.userbp.com'
   - '+.userhostting.com'
   - '+.userresearch.net'
@@ -56156,7 +56149,6 @@ payload:
   - '+.wuhan.com'
   - '+.wuhan163.com'
   - '+.wuhananyu.com'
-  - '+.wuhanart.com'
   - '+.wuhanbaituo.com'
   - '+.wuhanbus.com'
   - '+.wuhancityofdesign.com'
@@ -56761,7 +56753,6 @@ payload:
   - '+.xchjw.org'
   - '+.xchlxx.com'
   - '+.xchmai.com'
-  - '+.xchrc.com'
   - '+.xchuandai.com'
   - '+.xchuxing.com'
   - '+.xciic.com'
@@ -59114,10 +59105,8 @@ payload:
   - '+.y9photo.com'
   - '+.ya17.com'
   - '+.ya247.com'
-  - '+.yaability.com'
   - '+.yaahe.com'
   - '+.yabo.com'
-  - '+.yabodns.com'
   - '+.yabolive.com'
   - '+.yabovip2029.com'
   - '+.yac8.com'
@@ -59670,7 +59659,6 @@ payload:
   - '+.ygibao.com'
   - '+.yginsight.com'
   - '+.ygjj.com'
-  - '+.ygjoy.com'
   - '+.ygo.wiki'
   - '+.ygread.com'
   - '+.ygsdmedia.com'
@@ -60395,6 +60383,7 @@ payload:
   - '+.yluu.com'
   - '+.ylwl.cc'
   - '+.ylws.net'
+  - '+.ylwt33.com'
   - '+.ylwyw.com'
   - '+.ylxdtww.com'
   - '+.ylxk.net'
@@ -60564,6 +60553,8 @@ payload:
   - '+.yoloho.com'
   - '+.yomiko.cloud'
   - '+.yomiko.club'
+  - '+.yomiko.fun'
+  - '+.yomiko.tech'
   - '+.yomob.com'
   - '+.yomocode.com'
   - '+.yongaomy.com'
@@ -62694,7 +62685,6 @@ payload:
   - '+.zhaosw.com'
   - '+.zhaouc.com'
   - '+.zhaouc.net'
-  - '+.zhaowenxishi.com'
   - '+.zhaowofanyi.com'
   - '+.zhaowuding.net'
   - '+.zhaoxi.net'
@@ -64393,6 +64383,7 @@ payload:
   - '+.zuoyebang.com'
   - '+.zuoyehezi.com'
   - '+.zuoyesou.com'
+  - '+.zuozu.net'
   - '+.zupig.com'
   - '+.zupuk.com'
   - '+.zupulu.com'
